# ServoLib

./: .clangd  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  QWEN.md  README.md  build.sh  configure.sh  flash.sh
Apps/debug_brake/: CMakeLists.txt  main.c
Apps/debug_current/: CMakeLists.txt  main.c
Apps/debug_encoder/: CMakeLists.txt  main.c
Apps/debug_motor/: CMakeLists.txt  main.c
Apps/servo_full/: CMakeLists.txt  main.c
Board/PC_Emulation/: board.c  board_config.h  hwd_gpio.c  hwd_pwm.c  hwd_timer.c  hwd_udp.c
Board/STM32F411/: board.c  board_config.h  hwd_gpio.c  hwd_i2c.c  hwd_pwm.c  hwd_spi.c  hwd_timer.c
Board/STM32F411_OCM3/: STM32F411CE.ld  board.c  board_config.h  hwd_adc.c  hwd_gpio.c  hwd_i2c.c  hwd_pwm.c  hwd_spi.c  hwd_timer.c  hwd_uart.c
Doc/: AEAT-9922_DRIVER_GUIDE.md  ARCHITECTURE_PLAN.md  BRAKE_DRIVER.md  GEARBOX_SENSOR.md  OPENER_INTEGRATION_FINAL.md  OPENER_INTEGRATION_PLAN.md  PHASE1_PROGRESS.md  README.md  structure.md  technical_specifications.md
Doc/AEAT-9922/: CONFIGURATION_GUIDE.md  README.TXT
Emulator/: ARCHITECTURE.md  BUILD.md  CMakeLists.txt  README.md  TESTING.md  TEST_SCENARIOS.md  UDP_PROTOCOL.md  brake_mock.c  build.bat  devicedata.h  main.c  udp_client.c  udp_client.h
Examples/: AEAT9922_QUICK_START.md  MOTOR_DRIVER_EXAMPLE.md  MOTOR_PWM_DIR_GUIDE.md  README.md  aeat9922_encoder_example.c  aeat9922_encoder_example.txt  aeat9922_quick_start.c  aeat9922_spi4_abi_example.c  crc8_polynomial_finder.py  motor_pwm_dir_example.txt
Inc/: config.h  config_defaults.h  config_lib.h  config_user.h  core.h
Inc/ctrl/: calib.h  err.h  pid.h  pid_mgr.h  safety.h  servo.h  time.h  traj.h
Inc/drv/brake/: brake.h  brake_udp.h  gpio_brake.h
Inc/drv/current/: acs712.h  current.h
Inc/drv/motor/: base.h  motor.h  pwm.h  pwm_udp.h
Inc/drv/position/: aeat9922.h  as5600.h  incremental_encoder.h  position.h
Inc/drv/sensor/: aeat9922.h  as5600.h  i2c.h  pos.h  sensor_udp.h
Inc/hwd/: hwd.h  hwd_adc.h  hwd_eip.h  hwd_eip_assembly.h  hwd_eip_ds402.h  hwd_gpio.h  hwd_i2c.h  hwd_pwm.h  hwd_spi.h  hwd_timer.h  hwd_uart.h  hwd_udp.h
Inc/iface/: brake.h  motor.h  sensor.h
Inc/util/: buf.h  checksum.h  derivative.h  math.h  prediction.h
Src/: core.c
Src/ctrl/: calib.c  err.c  pid.c  pid_mgr.c  safety.c  servo.c  time.c  traj.c
Src/drv/brake/: brake.c  brake_udp.c  gpio_brake.c
Src/drv/current/: acs712.c  current.c
Src/drv/motor/: base.c  motor.c  pwm.c  pwm_udp.c
Src/drv/position/: aeat9922.c  as5600.c  incremental_encoder.c  position.c
Src/drv/sensor/: aeat9922.c  as5600.c  i2c.c  pos.c  sensor_udp.c
Src/hwd/: hwd.c  hwd_eip.c  hwd_eip_assembly.c  hwd_eip_ds402.c  hwd_udp.c
Src/iface/: brake.c  motor.c  sensor.c
Src/util/: buf.c  checksum.c  derivative.c  math.c  prediction.c
Templates/: config_user_template.h
cmake/: ServoLib.cmake  stm32.cmake
cmake/targets/: STM32F411_OCM3.cmake
cmake/toolchain/: arm-none-eabi.cmake
